added model and page for accounts

--- a/finance/main/templates/main/base.html
+++ b/finance/main/templates/main/base.html
@@ -34,7 +34,7 @@
                                 <a class="nav-link" href="/">History</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/">Add</a>
+                                <a class="nav-link" href="/accounts">Accounts</a>
                             </li>
                         </ul>
                         <div class="container-fluid" id="logoutDiv">
