created models for debit

--- a/finance/main/templates/main/accounts.html
+++ b/finance/main/templates/main/accounts.html
@@ -13,7 +13,7 @@
                     <thead>
                         <tr>
                             <th scope="col">Accounts</th>
-                            <th scope="col">Balance</th>
+                            <th scope="col">Initial Balance</th>
                         </tr>
                     </thead>
                     <tbody>
