--- a/finance/main/templates/main/home.html
+++ b/finance/main/templates/main/home.html
@@ -3,7 +3,36 @@
 {% block title %}
     Home
 {% endblock %}
+{% load crispy_forms_tags %}
 
 {% block content %}
-    <h1>test</h1>
+    <div class="container">
+        <div class="container-md m-5">
+            {% if user.category.all %}
+                <table class="table table-hover table-light">
+                    <thead>
+                        <tr>
+                            <th scope="col">Category</th>
+                            <th scope="col">Expense</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for category in user.category.all %}
+                            <tr>
+                                <td>{{ category.category_name }}</td>
+                                <td>{{ account.balance }}</td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            {% endif %}
+            <div class="container p-5">
+                <form action="/accounts/" class="form-group" method="POST" autocomplete="off">
+                    {% csrf_token %}
+                    {{ form | crispy }}
+                    <button type="submit" class="btn btn-secondary">Add Account</button>
+                </form>
+            </div>
+        </div>
+    </div>
 {% endblock %}
