--- a/finance/main/templates/main/home.html
+++ b/finance/main/templates/main/home.html
@@ -7,7 +7,7 @@
 
 {% block content %}
     <div class="container">
-        <div class="container-md m-5">
+        <div class="container-md">
             {% if user.category.all %}
                 <table class="table table-hover table-light">
                     <thead>
@@ -25,13 +25,17 @@
                         {% endfor %}
                     </tbody>
                 </table>
+            {% else %}
+                <p>Please add accounts to track first</p>
             {% endif %}
-            <div class="container p-5">
-                <form action="/accounts/" class="form-group" method="POST" autocomplete="off">
-                    {% csrf_token %}
-                    {{ form | crispy }}
-                    <button type="submit" class="btn btn-secondary">Add Account</button>
-                </form>
+            <div class="container">
+                <div class="container p-5">
+                    <form action="/" class="form-group" method="POST" autocomplete="off">
+                        {% csrf_token %}
+                        {{ form | crispy }}
+                        <button value="add_category" type="submit" class="btn btn-secondary">Add Account</button>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
