--- a/finance/main/templates/main/home.html
+++ b/finance/main/templates/main/home.html
@@ -8,6 +8,8 @@
 {% block content %}
     <div class="container">
         <div class="container-md">
+
+            <!-- display categories only if category table populated-->
             {% if user.category.all %}
                 <table class="table table-hover table-light">
                     <thead>
@@ -25,16 +27,94 @@
                         {% endfor %}
                     </tbody>
                 </table>
+
+            <!-- prompt user to add a categories to track first -->
             {% else %}
                 <p>Please add accounts to track first</p>
             {% endif %}
+
+            <!-- allow user to add categories to track -->
             <div class="container">
                 <div class="container p-5">
                     <form action="/" class="form-group" method="POST" autocomplete="off">
                         {% csrf_token %}
-                        {{ form | crispy }}
-                        <button value="add_category" type="submit" class="btn btn-secondary">Add Account</button>
+                        {{ formC | crispy }}
+                        <button name="add_category" type="submit" class="btn btn-secondary">Add Category</button>
                     </form>
+                </div>
+            </div>
+
+            <!-- allow user to add debit/credit to track -->
+            <div class="container">
+                <div class="container p-5">
+                    <form action="/" class="form-control form-control-sm" method="POST" autocomplete="off">
+                        {% csrf_token %}
+                        {{ formD | crispy }}
+                        <button name="add_expense" type="submit" class="btn btn-secondary">Add Debit</button>
+                        <button name="add_credit" type="submit" class="btn btn-secondary">Add Credit</button>
+                    </form>
+                </div>
+            </div>
+
+            <!-- expense and earnings tables -->
+            <div class="container">
+                <div class="row">
+                    <!-- display expenses only if debit/credit table poplulated -->
+                    <div class="col">
+                        {%if user.debit.all or user.debit.all %}
+                            <h4>Debit</h4>
+                            <table class="table table-hover table-light">
+                                <thead>
+                                    <tr>
+                                        <th>Date</th>
+                                        <th>Amount</th>
+                                        <th>Description</th>
+                                        <th>Category</th>
+                                        <th>Account</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for debit in user.debit.all %}
+                                        <tr>
+                                            <td>{{ debit.date }}</td>
+                                            <td>{{ debit.amount }}</td>
+                                            <td>{{ debit.description }}</td>
+                                            <td>{{ debit.category }}</td>
+                                            <td>{{ debit.account }}</td>
+                                        </tr>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
+                        {% endif %}
+                    </div>
+                    <!-- display credit only if debit/credit table poplulated -->
+                    <div class="col">
+                        {%if user.debit.all or user.credit.all %}
+                            <h4>Credit</h4>
+                            <table class="table table-hover table-light">
+                                <thead>
+                                    <tr>
+                                        <th>Date</th>
+                                        <th>Amount</th>
+                                        <th>Description</th>
+                                        <th>Category</th>
+                                        <th>Account</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for credit in user.credit.all %}
+                                        <tr>
+                                            <td>{{ credit.date }}</td>
+                                            <td>{{ credit.amount }}</td>
+                                            <td>{{ credit.description }}</td>
+                                            <td>{{ credit.category }}</td>
+                                            <td>{{ credit.account }}</td>
+                                        </tr>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
+                        {% endif %}
+                    </div>
                 </div>
             </div>
         </div>
