--- a/finance/main/templates/main/base.html
+++ b/finance/main/templates/main/base.html
@@ -18,7 +18,7 @@
     </head>
     <body>
         <!-- navigation section -->
-        <nav class="navbar navbar-expand-md bg-dark border-bottom border-body" data-bs-theme="dark">
+        <nav class="navbar navbar-expand-md border-bottom border-body" data-bs-theme="dark">
             <div class="container-fluid">
                 <a href="/" class="navbar-brand">Finance</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -64,7 +64,7 @@
         </div>
 
         <!-- footer section -->
-        <footer class="bg-dark py-5 mt-5">
+        <footer class="py-5 mt-5">
             <div class="container text-light text-center">
                 <p class="display-5 mb-3"> Finance </p>
                 <small class="text-white-50">&copy; Copyright by Edward for CS50 Final Project</small>
