--- a/finance/register/templates/register.html
+++ b/finance/register/templates/register.html
@@ -6,9 +6,14 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-    <form action="" class="form-group" autocomplete="off" method="POST">
-        {% csrf_token %}
-        {{ form | crispy }}
-        <button type="submit" class="btn btn-secondary"> Register </button>
-    </form>
+    <div class="container">
+        <div class="container w-75 p-5">
+            <h1 class="text-center pb-3">Register a New User</h1>
+            <form action="" class="form-control form-control-sm" autocomplete="off" method="POST">
+                {% csrf_token %}
+                {{ form | crispy }}
+                <button type="submit" class="btn btn-secondary"> Register </button>
+            </form>
+        </div>
+    </div>
 {% endblock %}
