--- a/finance/register/templates/registration/login.html
+++ b/finance/register/templates/registration/login.html
@@ -5,13 +5,15 @@
 {% load crispy_forms_tags %}
 
 {% block content %} 
-    <div class="container">
-        <div class="container w-50">
-            <form class="form-group" autocomplete="off" method="post">
+    <div class="container loginForm">
+        <div class="container w-75 p-5">
+            <h1 class="text-center pb-3">Login</h1>
+            <form class="form-control form-control-sm" autocomplete="off" method="post">
                 {% csrf_token %}
                 {{ form | crispy}}
                 <button type="submit" class="btn btn-secondary">Login</button>
-            </form>         
+            </form>
+            <p class="p-3">No account yet? Create an account <a href="/register/">here</a></p>
         </div>
     </div>
 {% endblock %}
