--- a/finance/main/templates/main/accounts.html
+++ b/finance/main/templates/main/accounts.html
@@ -6,6 +6,14 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
+{% if messages %}
+<div class="container alert w-75">
+    <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+    {% for message in messages %}
+        {{ message }}
+    {% endfor %}
+</div>
+{% endif %}
     <div class="container">
         <div class="container-md m-5">
             {% if user.accounts.all %}
