fixed bug in generating forms CreateNewEntry where accounts and category objects are taken from all users instead of current user only, fixed in views.py and helper.py

--- a/finance/main/templates/main/accounts.html
+++ b/finance/main/templates/main/accounts.html
@@ -14,7 +14,7 @@
     {% endfor %}
 </div>
 {% endif %}
-    <div class="container">
+    <div class="container w-75">
         <div class="container-md m-5">
             {% if user.accounts.all %}
                 <table class="table table-hover table-dark">
