--- a/finance/main/templates/main/home.html
+++ b/finance/main/templates/main/home.html
@@ -81,47 +81,44 @@
             <div class="container">
                 <div class="row">
                     <!-- display expenses only if debit/credit table poplulated -->
-                    <div class="col">
-                        {%if user.debit.all or user.debit.all %}
+                     <div class="col p-3">
+                        {%if user.debit.all or user.credit.all %}
                             <h4>Debit</h4>
-                            <div class="container text-center">
-                                <table class="table table-hover table-light">
-                                    <thead>
-                                        <tr>
-                                            <th>Date</th>
-                                            <th>Amount</th>
-                                            <th>Description</th>
-                                            <th>Category</th>
-                                            <th>Account</th>
-                                            <th>Remove</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        {% for debit in debitData %}
-                                                <tr>
-                                                    <td>{{ debit.date }}</td>
-                                                    <td>{{ debit.amount }}</td>
-                                                    <td>{{ debit.description }}</td>
-                                                    <td>{{ debit.category }}</td>
-                                                    <td>{{ debit.account }}</td>
-                                                    <td>
-                                                        <form action="/{{ debit.id }}" method="POST">
-                                                            {% csrf_token %}
-                                                            <input hidden  name="debit">
-                                                            <button type="submit" class="btn btn-secondary">Delete</button>
-                                                        </form>                    
-                                                    </td>
-                                                </tr>
-                                        {% endfor %}
-                                    </tbody>
-                                </table>
-                            </div>
+                            <table class="table table-hover table-light">
+                                <thead>
+                                    <tr>
+                                        <th>Date</th>
+                                        <th>Amount</th>
+                                        <th>Description</th>
+                                        <th>Category</th>
+                                        <th>Account</th>
+                                        <th>Remove</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for debit in debitData %}
+                                            <tr>
+                                                <td>{{ debit.date }}</td>
+                                                <td>{{ debit.amount }}</td>
+                                                <td>{{ debit.description }}</td>
+                                                <td>{{ debit.category }}</td>
+                                                <td>{{ debit.account }}</td>
+                                                <td>
+                                                    <form action="/{{ debit.id }}" method="POST">
+                                                        {% csrf_token %}
+                                                        <input hidden  name="debit">
+                                                        <button type="submit" class="btn btn-secondary">Delete</button>
+                                                    </form>                    
+                                                </td>
+                                            </tr>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
                         {% endif %}
-                            
                     </div>
 
                     <!-- display credit only if debit/credit table poplulated -->
-                    <div class="col">
+                    <div class="col p-3">
                         {%if user.debit.all or user.credit.all %}
                             <h4>Credit</h4>
                             <table class="table table-hover table-light">
@@ -132,6 +129,7 @@
                                         <th>Description</th>
                                         <th>Category</th>
                                         <th>Account</th>
+                                        <th>Remove</th>
                                     </tr>
                                 </thead>
                                 <tbody>
