--- a/finance/main/templates/main/accounts.html
+++ b/finance/main/templates/main/accounts.html
@@ -6,6 +6,8 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
+
+<!-- alert message handling -->
 {% if messages %}
 <div class="container alert w-75">
     <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
@@ -14,33 +16,104 @@
     {% endfor %}
 </div>
 {% endif %}
+
+<!-- prompt user to add accounts to track first -->
+{% if not user.accounts.all %}
+<div class="container alert w-75">
+    <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+    Please add accounts to track 
+</div>
+{% endif %}
+<!-- prompt user to add categories to track first -->
+{% if not user.category.all %}
+<div class="container alert w-75">
+<span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+Please add categories to track
+</div>
+{% endif %}
+
+    <!-- for accounts table -->
     <div class="container w-75">
         <div class="container-md m-5">
-            {% if user.accounts.all %}
-                <table class="table table-hover table-dark">
-                    <thead>
+            <table class="table table-hover table-dark">
+                <thead>
+                    <tr>
+                        <th scope="col">Accounts</th>
+                        <th scope="col">Initial Balance</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for account in user.accounts.all %}
                         <tr>
-                            <th scope="col">Accounts</th>
-                            <th scope="col">Initial Balance</th>
+                            <td>{{ account.account_name }}</td>
+                            <td>{{ account.balance }}</td>
                         </tr>
-                    </thead>
-                    <tbody>
-                        {% for account in user.accounts.all %}
-                            <tr>
-                                <td>{{ account.account_name }}</td>
-                                <td>{{ account.balance }}</td>
-                            </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-            {% endif %}
-            <div class="container p-5">
-                <form action="/accounts/" class="form-group" method="POST" autocomplete="off">
-                    {% csrf_token %}
-                    {{ form | crispy}}
-                    <button type="submit" class="btn btn-secondary">Add Account</button>
-                </form>
+                    {% endfor %}
+                </tbody>
+            </table>
+
+            <!-- adding and editing accounts -->
+            <div class="container p-3">
+                <div class="row">
+                    <div class="col">
+                        <form action="/accounts/" class="form-group" method="POST" autocomplete="off">
+                            {% csrf_token %}
+                            {{ formA | crispy}}
+                            <button name="addAccount" type="submit" class="btn btn-secondary">Add Account</button>
+                        </form>
+                    </div>
+                    <div class="col">
+                        <form action="/accounts/" class="form-group" method="POST" autocomplete="off">
+                            {% csrf_token %}
+                            {{ formEditA | crispy}}
+                            <button name="editAccount" type="submit" class="confirm-edit btn btn-secondary">Edit Account</button>
+                        </form>
+                    </div>
+                </div>
             </div>
+        </div>
+    </div>
+
+    <!-- for categories table -->
+    <div class="container w-50">
+        <div class="container-md m-5">
+            <table class="table table-hover table-dark">
+                <thead>
+                    <tr>
+                        <th scope="col">Category</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for category in user.category.all %}
+                        <tr>
+                            <td>{{ category.category_name }}</td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+
+            <!-- for adding and editing categories -->
+
+            <div class="container p-3">
+                <div class="row">
+                    <div class="col">
+                        <form action="/accounts/" class="form-group" method="POST" autocomplete="off">
+                            {% csrf_token %}
+                            {{ formC | crispy}}
+                            <button name="addCategory" type="submit" class="btn btn-secondary">Add Account</button>
+                        </form>
+                    </div>
+                    <div class="col">
+                        <form action="/accounts/" class="form-group" method="POST" autocomplete="off">
+                            {% csrf_token %}
+                            {{ formEditC | crispy}}
+                            <button name="editCategory" type="submit" class="confirm-edit btn btn-secondary">Edit Category</button>
+                        </form>
+                    </div>
+                </div>
+
+            </div>
+
         </div>
     </div>
 {% endblock %}
