--- a/finance/main/templates/main/base.html
+++ b/finance/main/templates/main/base.html
@@ -14,6 +14,8 @@
         <!-- static css file -->
         {% load static %}
         <link rel="stylesheet" href="{% static 'main/style.css' %}">
+        <script src="{% static 'main/scripts.js' %}"></script>
+
     </head>
     </head>
     <body>
