--- a/finance/main/templates/main/base.html
+++ b/finance/main/templates/main/base.html
@@ -30,10 +30,10 @@
                     {% if user.is_authenticated %}
                         <ul class="navbar-nav" id="menu">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="/">Home</a>
+                                <a class="nav-link" href="/">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/">History</a>
+                                <a class="nav-link" href="/history">History</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="/accounts">Accounts</a>
@@ -60,7 +60,10 @@
         </nav>
 
         <!-- main content -->
-        <div class="container mt-5" id="main">
+         {% if user.is_authenticated %}
+         <p class="text-center">{{user.username}}</p>
+         {% endif %}
+        <div class="container-fluid mt-5" id="main">
             {% block content %}
             {% endblock %}
         </div>
