--- a/finance/main/templates/main/home.html
+++ b/finance/main/templates/main/home.html
@@ -6,7 +6,7 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<h2 class="text-center">{% now "F Y" %}</h2>
+<h1 id="monthYear" class="text-center">{% now "F Y" %}</h1>
 <!-- alert message for new user and trying to add categories that are already added -->
 {% if messages %}
 <div class="container alert w-75">
@@ -28,14 +28,15 @@
 {% if not user.category.all %}
 <div class="container alert w-75">
 <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-Please add categories to track <a href="/accounts/">here</a>
+    Please add categories to track <a href="/accounts/">here</a>
 </div>
 {% endif %}
 
-    <div class="container">
-        <div class="container-lg">
+    <div class="container-fluid">
+        <h2 class="labels text-center">Summary</h2>
+        {% if user.category.all %}
             <!-- display categories only if category table populated-->
-            {% if user.category.all %}
+            <div class="container-md">
                 <div class="row">
                     <div class="col">
                         <h4>Debit</h4>
@@ -53,6 +54,10 @@ Please add categories to track <a href="/accounts/">here</a>
                                         <td>{{ amount }}</td>
                                     </tr>
                                 {% endfor %}
+                                <tr>
+                                    <td class="fw-bold text-sm-end text-lg-center">Total</td>
+                                    <td>{{ debitTotal }}</td>
+                                </tr>
                             </tbody>
                         </table>
                     </div>
@@ -72,105 +77,108 @@ Please add categories to track <a href="/accounts/">here</a>
                                         <td>{{ amount }}</td>
                                     </tr>
                                 {% endfor %}
+                                <tr>
+                                    <td class="fw-bold text-sm-end text-lg-center">Total</td>
+                                    <td>{{ creditTotal }}</td>
+                                </tr>
                             </tbody>
                         </table>
                     </div>
                 </div>
+            </div>  
+        {% endif %}
 
-            {% endif %}
+        <!-- allow user to add debit/credit to track -->
+        <div class="container-md p-5">
+            <div class="container p-5">
+                <form action="/" class="form-control form-control-sm" method="POST" autocomplete="off">
+                    {% csrf_token %}
+                    {{ formD | crispy }}
+                    <button name="add_expense" type="submit" class="btn btn-secondary">Add Debit</button>
+                    <button name="add_credit" type="submit" class="btn btn-secondary">Add Credit</button>
+                </form>
+            </div>
+        </div>
 
-            <!-- allow user to add debit/credit to track -->
-                <div class="container w-75 pb-5 pt-3">
-                    <div class="container">
-                        <form action="/" class="form-control form-control-sm" method="POST" autocomplete="off">
-                            {% csrf_token %}
-                            {{ formD | crispy }}
-                            <button name="add_expense" type="submit" class="btn btn-secondary">Add Debit</button>
-                            <button name="add_credit" type="submit" class="btn btn-secondary">Add Credit</button>
-                        </form>
-                    </div>
+        <!-- expense and earnings tables -->
+        <div class="container-fluid">
+            <h2 class="labels text-center">Transactions</h2>
+            <div class="row">
+                <!-- display expenses only if debit/credit table poplulated -->
+                <div class="col p-3">
+                {%if user.debit.all or user.credit.all %}
+                    <h4>Debit</h4>
+                    <table class="table table-hover table-light">
+                        <thead>
+                            <tr>
+                                <th>Date</th>
+                                <th>Amount</th>
+                                <th>Description</th>
+                                <th>Category</th>
+                                <th>Account</th>
+                                <th>Remove</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for debit in debitData %}
+                                    <tr>
+                                        <td>{{ debit.date }}</td>
+                                        <td>{{ debit.amount }}</td>
+                                        <td>{{ debit.description }}</td>
+                                        <td>{{ debit.category }}</td>
+                                        <td>{{ debit.account }}</td>
+                                        <td>
+                                            <form action="/{{ debit.id }}" method="POST">
+                                                {% csrf_token %}
+                                                <input hidden  name="debit">
+                                                <button type="submit" class="confirm-delete btn btn-secondary">Delete</button>
+                                            </form>                    
+                                        </td>
+                                    </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                {% endif %}
                 </div>
 
-            <!-- expense and earnings tables -->
-            <div class="container">
-                <div class="row">
-                    <!-- display expenses only if debit/credit table poplulated -->
-                     <div class="col p-3">
-                        {%if user.debit.all or user.credit.all %}
-                            <h4>Debit</h4>
-                            <table class="table table-hover table-light">
-                                <thead>
+                <!-- display credit only if debit/credit table poplulated -->
+                <div class="col p-3">
+                    {%if user.debit.all or user.credit.all %}
+                        <h4>Credit</h4>
+                        <table class="table table-hover table-light">
+                            <thead>
+                                <tr>
+                                    <th>Date</th>
+                                    <th>Amount</th>
+                                    <th>Description</th>
+                                    <th>Category</th>
+                                    <th>Account</th>
+                                    <th>Remove</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for credit in creditData %}
                                     <tr>
-                                        <th>Date</th>
-                                        <th>Amount</th>
-                                        <th>Description</th>
-                                        <th>Category</th>
-                                        <th>Account</th>
-                                        <th>Remove</th>
+                                        <td>{{ credit.date }}</td>
+                                        <td>{{ credit.amount }}</td>
+                                        <td>{{ credit.description }}</td>
+                                        <td>{{ credit.category }}</td>
+                                        <td>{{ credit.account }}</td>
+                                        <td>
+                                            <form action="/{{ credit.id }}" method="POST">
+                                                {% csrf_token %}
+                                                <input hidden  name="credit">
+                                                <button type="submit" class="confirm-delete btn btn-secondary">Delete</button>
+                                            </form>                    
+                                        </td>
                                     </tr>
-                                </thead>
-                                <tbody>
-                                    {% for debit in debitData %}
-                                            <tr>
-                                                <td>{{ debit.date }}</td>
-                                                <td>{{ debit.amount }}</td>
-                                                <td>{{ debit.description }}</td>
-                                                <td>{{ debit.category }}</td>
-                                                <td>{{ debit.account }}</td>
-                                                <td>
-                                                    <form action="/{{ debit.id }}" method="POST">
-                                                        {% csrf_token %}
-                                                        <input hidden  name="debit">
-                                                        <button type="submit" class="confirm-delete btn btn-secondary">Delete</button>
-                                                    </form>                    
-                                                </td>
-                                            </tr>
-                                    {% endfor %}
-                                </tbody>
-                            </table>
-                        {% endif %}
-                    </div>
-
-                    <!-- display credit only if debit/credit table poplulated -->
-                    <div class="col p-3">
-                        {%if user.debit.all or user.credit.all %}
-                            <h4>Credit</h4>
-                            <table class="table table-hover table-light">
-                                <thead>
-                                    <tr>
-                                        <th>Date</th>
-                                        <th>Amount</th>
-                                        <th>Description</th>
-                                        <th>Category</th>
-                                        <th>Account</th>
-                                        <th>Remove</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    {% for credit in creditData %}
-                                        <tr>
-                                            <td>{{ credit.date }}</td>
-                                            <td>{{ credit.amount }}</td>
-                                            <td>{{ credit.description }}</td>
-                                            <td>{{ credit.category }}</td>
-                                            <td>{{ credit.account }}</td>
-                                            <td>
-                                                <form action="/{{ credit.id }}" method="POST">
-                                                    {% csrf_token %}
-                                                    <input hidden  name="credit">
-                                                    <button type="submit" class="confirm-delete btn btn-secondary">Delete</button>
-                                                </form>                    
-                                            </td>
-                                        </tr>
-                                    {% endfor %}
-                                </tbody>
-                            </table>
-                        {% endif %}
-                    </div>
-
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    {% endif %}
                 </div>
             </div>
-
         </div>
+
     </div>
 {% endblock %}
