--- a/finance/main/static/main/style.css
+++ b/finance/main/static/main/style.css
@@ -7,6 +7,7 @@
     border: none;
     margin-top: 8px;
     margin-left: 5px;
+    margin-right: 10px;
     padding: 0!important;
 
     /*input has OS specific font-family*/
@@ -22,16 +23,17 @@
 #logoutDiv {
     text-align: right;
     padding-bottom: 8px;
+    padding-left: 0px;
 }
 
 #menu {
-    margin-left: 35%;
+    margin-left: 5%;
 }
 
 .navbar {
     background-color: #1B262C;
     padding-top: 15px;
-    padding-bottom: 15px;
+    padding-bottom: 18px;
 }
 
 .navbar-brand {
@@ -83,4 +85,23 @@ footer {
     padding-top: 7px;
     padding-bottom: 7px;
     margin-bottom: 20px
+}
+
+#userName {
+    color: white;
+    padding-top: 18px;
+    margin-left: 20px;
+    color: rgba(255, 255, 255, 0.55);
+}
+
+#noTransactions {
+    color: red;
+}
+
+.fullHeight {
+    height: 75vh;
+}
+
+.dropdown-menu {
+    --bs-dropdown-min-width: 20rem;
 }
