added email field to register and made it required, setup to email verification

--- a/finance/main/templates/main/accounts.html
+++ b/finance/main/templates/main/accounts.html
@@ -39,7 +39,7 @@ Please add categories to track
                 <thead>
                     <tr>
                         <th scope="col">Accounts</th>
-                        <th scope="col">Initial Balance</th>
+                        <th scope="col">Balance</th>
                     </tr>
                 </thead>
                 <tbody>
