--- a/finance/register/templates/registration/login.html
+++ b/finance/register/templates/registration/login.html
@@ -24,6 +24,7 @@
                 <button type="submit" class="btn btn-secondary">Login</button>
             </form>
             <p class="p-3">No account yet? Create an account <a href="/register/">here</a></p>
+            <p><a class="p-3" href="/password_reset/">Forgot Password?</a></p>
         </div>
     </div>
 {% endblock %}
