--- a/finance/register/templates/activateAccount.html
+++ b/finance/register/templates/activateAccount.html
@@ -1,6 +1,6 @@
 {% autoescape off %}
 
-Hi {{ user.username }}, thank you for registering to our app.
+Hi {{ user }}, thank you for registering to our app.
 
 Please click the link below to confirm your registration:
 
