--- a/finance/main/templates/main/home.html
+++ b/finance/main/templates/main/home.html
@@ -51,12 +51,12 @@
                                 {% for category, amount in debitCategory.items %}
                                     <tr>
                                         <td>{{ category }}</td>
-                                        <td>{{ amount }}</td>
+                                        <td>{{ user.profile.currency }}{{ amount }}</td>
                                     </tr>
                                 {% endfor %}
                                 <tr>
                                     <td class="fw-bold text-sm-end text-lg-center">Total</td>
-                                    <td>{{ debitTotal }}</td>
+                                    <td>{{ user.profile.currency }}{{ debitTotal }}</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -74,12 +74,12 @@
                                 {% for category, amount in creditCategory.items %}
                                     <tr>
                                         <td>{{ category }}</td>
-                                        <td>{{ amount }}</td>
+                                        <td>{{ user.profile.currency }}{{ amount }}</td>
                                     </tr>
                                 {% endfor %}
                                 <tr>
                                     <td class="fw-bold text-sm-end text-lg-center">Total</td>
-                                    <td>{{ creditTotal }}</td>
+                                    <td>{{ user.profile.currency }}{{ creditTotal }}</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -124,7 +124,7 @@
                             {% for debit in debitData %}
                                     <tr>
                                         <td>{{ debit.date }}</td>
-                                        <td>{{ debit.amount }}</td>
+                                        <td>{{ user.profile.currency }}{{ debit.amount }}</td>
                                         <td>{{ debit.description }}</td>
                                         <td>{{ debit.category }}</td>
                                         <td>{{ debit.account }}</td>
@@ -161,7 +161,7 @@
                                 {% for credit in creditData %}
                                     <tr>
                                         <td>{{ credit.date }}</td>
-                                        <td>{{ credit.amount }}</td>
+                                        <td>{{ user.profile.currency }}{{ credit.amount }}</td>
                                         <td>{{ credit.description }}</td>
                                         <td>{{ credit.category }}</td>
                                         <td>{{ credit.account }}</td>
