--- a/finance/main/templates/main/search.html
+++ b/finance/main/templates/main/search.html
@@ -29,7 +29,7 @@
                             {% for debit in debitData %}
                                     <tr>
                                         <td>{{ debit.date }}</td>
-                                        <td>{{ debit.amount }}</td>
+                                        <td>{{ user.profile.currency }}{{ debit.amount }}</td>
                                         <td>{{ debit.description }}</td>
                                         <td>{{ debit.category }}</td>
                                         <td>{{ debit.account }}</td>
@@ -64,7 +64,7 @@
                             {% for credit in creditData %}
                                 <tr>
                                     <td>{{ credit.date }}</td>
-                                    <td>{{ credit.amount }}</td>
+                                    <td>{{ user.profile.currency }}{{ credit.amount }}</td>
                                     <td>{{ credit.description }}</td>
                                     <td>{{ credit.category }}</td>
                                     <td>{{ credit.account }}</td>
